# mcp-kafka

./: Dockerfile  Makefile  README.md  pyproject.toml
mcp_kafka/: config.py  server.py  service.py
tests/: test_service.py
