[project]
name = "mcp_kafka"
version = "0.0.1"
authors = [{ name="Brandon Powers" }]
description = "An MCP server for Apache Kafka."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.13"
classifiers = []
dependencies = [
     "confluent-kafka>=2.8.2",
     "isort>=6.0.1",
     "kubernetes>=32.0.1",
     "mcp[cli]>=1.3.0",
     "pytest>=8.3.5",
     "python-dotenv>=1.0.1",
     "requests>=2.32.3",
     "ruff>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/brandon-powers/mcp-kafka"

[project.scripts]
mcp-kafka = "mcp_kafka.server:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_kafka"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
